--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-clean-css": "^2.0.7",
+    "gulp-livereload": "^3.8.1",
     "gulp-minify": "0.0.11",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.3.1",
